# PrivateVault-Mega-Repo

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  SECURITY.md  agent_identity.py  agent_runner.py  ai_firewall_core.py  analyze_medtech_30d.py  api_keys.json  approval_binding.py  approval_store.py  audit_and_versioning.py  audit_log.py  audit_logger.py  audit_view.py  audit_viewer.py  audits.worm  auth.py  backup.bundle  banking_final_demo.py  buildspec.yml  capability_token.py  check_router.py  check_router_fallback.py  check_shadow.py  ciso_dashboard_report.py  cloudbuild.yaml  compliance_mapper.py  control_plane_api.py  control_plane_audit_reader.py  control_plane_replay.py  crypto_evidence.py  decision_ledger.py  demo_all_in_one.py  demo_loan.py  docker-compose.monitoring.yml  docker-compose.yml  drift_detection.py  (+97 more)
.venv-tests/: pyvenv.cfg
ai-firewall-demo/: ai_firewall_core.py  ai_firewall_ledger.jsonl  ai_firewall_orchestrator.py  ai_firewall_orchestrator_dual_drift.py  api.py  ciso_dashboard_report.py  compliance_mapper.py  decision_ledger.py  drift_detection.py  drift_detection_fixed.py  multi_agent_workflow.py  sandbox_simulation.py  test_api.py  tool_authorization.py
core_engine/: api.py
data/: approvals.json  context_vault.json
enterprise-audit/: verify-integrity.py
examples/: add_auth_to_endpoint.py  use_health_checks.py  use_input_validation.py  use_logging.py  use_metrics.py  use_secrets_manager.py
gateway/: app.py
governance-relay/: policy-v2.rego  relay.py  replay_engine.py
ledgers/: cosmos_adapter.py  ethereum_adapter.py  (+4 more)
(+129 files in other folders)
