[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galani-protocol"
version = "2.0.0"
description = "Universal Sovereign Layer for AI Governance"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Galani Team", email = "team@galani.io"}
]
keywords = ["ai", "governance", "security", "compliance", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "cryptography>=42.0.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=23.12.1",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/LOLA0786/PrivateVault-Mega-Repo"
Documentation = "https://docs.galani.io"
Repository = "https://github.com/LOLA0786/PrivateVault-Mega-Repo"
Issues = "https://github.com/LOLA0786/PrivateVault-Mega-Repo/issues"
